src/Acted/LegalDocsBundle/Resources/public/css/parts/feedback.css
/* ... */
i.star-icon.unfilled {
    background: url('/assets/images/star_unfilled_feedback.png') no-repeat;
}
i.star-icon.filled {
    background: url('/assets/images/star_feedback.png') no-repeat;
}

.feedback .rating-wrapper .rating-stars,
.feedback .rating-wrapper .rating-rate {
    display: inline-block;
}

.feedback .rating-wrapper .rating-stars {
    margin: 0 0 14px 0;
}
.feedback .rating-wrapper .rating-rate {
    vertical-align: top;
    font-family: LatoRegular;
    font-size: 16px;
    color: #000;
}
.feedback .rating-wrapper .rating-reach span {
    display: inline-block;
    vertical-align: middle;
    font-family: LatoRegular;
    font-size: 14px;
    color: rgba(0, 0, 0, 0.87);
}
.feedback .rating-wrapper .rating-reach .custom-checkbox label {
    display: inline;
}
.feedback .rating-wrapper .rating-reach .custom-checkbox label:before {
    top: 0;
}

.feedback .artist-feedback .avatar {
    display: inline-block;
}
.feedback .artist-feedback .avatar img {
    height: 33px;
    width: 33px;
    border-radius: 50%;
}

/**
margin: 0 0 0 47px;**/


/** --- FEEDBACK CLIENT --- **/
.dashboard.client ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    margin: 0 41px 0 41px;
}
.dashboard.client ul,
.dashboard.client ul li {
    display: inline-block;
}
/** --- EVENTS MENU --- **/
.dashboard.client .events-menu {
    margin: 21px 0 25px 0;
    position: relative;
    display: inline-block;
}
.dashboard.client .new-event {
    display: inline-block;
    font-family: LatoRegular;
    font-size: 14px;
    color: rgba(0, 0, 0, 0.87);
    margin: 0 0 0 40px;
}
.dashboard.client .events-menu .new-event .fa.fa-plus {
    padding: 0 0 0 11px;
}
.dashboard.client .events-menu .event-item:nth-last-of-type(1) {
    margin: 0 34px 0 0;
}
.dashboard.client .events-menu .event-item {
    height: 26px;
    border-radius: 3px;
    padding: 4px 13px 6px 13px;
    margin: 0 10px 0 0;

    width: 111px;
    overflow: hidden;
    display: inline-block;
    text-overflow: ellipsis;
    white-space: nowrap;
}
.dashboard.client .events-menu .event-item a {
    font-family: LatoRegular;
    font-size: 14px;
    color: rgba(0, 0, 0, 0.87);
}
.dashboard.client .events-menu .event-item a:hover {
    text-decoration: none;
    cursor: pointer;
}
.dashboard.client .events-menu .event-item.active a {
    color: #FFF;
}
.dashboard.client .events-menu .event-item.non-active {
    background-image: -webkit-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), -webkit-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    background-image: -moz-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), -moz-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    background-image: -o-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), -o-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    background-image: linear-gradient(to right, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), linear-gradient(to right, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    border-left: 2px solid rgba(88, 149, 243, 1);
    border-right: 2px solid rgba(73, 79, 199, 1);
    opacity: 0.67;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    background-position: 0 0, 0 100%;
    background-repeat: no-repeat;
    -webkit-background-size: 100% 20px;
    -moz-background-size: 100% 20px;
    background-size: 100% 2px;
}
.dashboard.client .events-menu .event-item.active {
    background-image: -webkit-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), -webkit-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    background-image: -moz-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), -moz-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    background-image: -o-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), -o-linear-gradient(left, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    background-image: linear-gradient(to right, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%), linear-gradient(to right, rgba(88, 149, 243, 1) 0%, rgba(73, 79, 199, 1) 100%);
    color: rgba(255, 255, 255, 1);
    border: none;
}
.dashboard.client .events-menu .arrows {

}
.dashboard.client .events-menu .arrows .left,
.dashboard.client .events-menu .arrows .right {
    background: url('/assets/images/arrow_media.png');
    display: inline-block;
    height: 22px;
    width: 21px;
}
.dashboard.client .events-menu .arrows .left:hover,
.dashboard.client .events-menu .arrows .right:hover {
    cursor: pointer;
}
.dashboard.client .events-menu .arrows .left {
    transform: rotate(360deg);
    position: absolute;
    left: 0;
    top: 2px;

}
.dashboard.client .events-menu .arrows .right {
    transform: rotate(180deg);
    position: absolute;
    right: 0;
    top: 2px;
}
/** --- OPTIONS MENU --- **/
.dashboard.client .options-menu li {
    margin: 0 66px 0 0;
}
.dashboard.client .options-menu li.active-item {
    border-bottom: 3px solid rgba(255, 121, 62, 1);
    padding-bottom: 10px;
}
.dashboard.client .tip-box {
    background-color: rgba(255, 121, 62, 0.3);
    border-radius: 3px;
    margin: 40px 0 0 0;
    text-align: center;
}
.dashboard.client .tip-box .text {
    color: rgba(0, 0, 0, 0.87);
    padding: 10px 96px 12px 96px;
    display: inline-block;
    font-family: LatoRegular;
    font-size: 14px;
    text-align: justify;
}
.dashboard.client .comment-area {
    margin: 14px 0 0 0;
}
.dashboard.client .comment-area section {
    padding: 0;
    margin: 0 0 14px 0;
}
.dashboard.client .comment-area .rating {
    display: inline-block;
    float: right;
}
.dashboard.client .comment-area .avatar,
.dashboard.client .comment-area .user-info {
    display: inline-block;
}
/* ... */

